--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -1,182 +1,134 @@
 {
-  "STRING_INTERNET_ERROR": "Verifique sua conexão com a internet...",
-  "STRING_SEARCH_HEADER": "Procurar uma música",
-  "STRING_SEARCH_MODE_SUBHEADER": "O que você está procurando?",
-  "STRING_COLLECTION": "Coleção",
-  "STRING_NOW_PLAYING": "Tocando agora",
-  "STRING_SETTING": "Configurações",
-  "STRING_OK": "OK",
-  "STRING_YES": "SIM",
-  "STRING_NO": "NÃO",
-  "STRING_ALBUM": "Álbuns",
-  "STRING_TRACK": "Músicas",
-  "STRING_TOP_TRACKS": "TOP MÚSICAS",
-  "STRING_ARTIST": "Artistas",
-  "STRING_SAVED": "Salvo",
-  "STRING_THEME_MODE_LIGHT": "Claro",
-  "STRING_THEME_MODE_DARK": "Escuro",
-  "STRING_OPTIONS": "Opções",
-  "STRING_FOLLOWERS": "seguidores",
-  "STRING_PLAYS": "tocadas",
-  "STRING_EXPORT_TRACK": "Exportar música",
-  "STRING_DELETE_TRACK": "Deletar música",
-  "STRING_SEARCH_MODE_SUBTITLE_ALBUM": "Procurar músicas do seu álbum favorito",
-  "STRING_SEARCH_MODE_SUBTITLE_TRACK": "Procurar suas músicas preferidas",
-  "STRING_SEARCH_MODE_SUBTITLE_ARTIST": "Procurar músicas do seu artistas preferidos",
-  "STRING_SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
-  "STRING_SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
-  "STRING_SEARCH_RESULT_TOP_SUBHEADER_ALBUM": "Aqui está o álbum mais perto de sua pesquisa",
-  "STRING_SEARCH_RESULT_TOP_SUBHEADER_TRACK": "Aqui está a música mais perta de sua pesquisa",
-  "STRING_SEARCH_RESULT_TOP_SUBHEADER_ARTIST": "Aqui está o artista que você procurou",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ALBUM": "BAIXAR ÁLBUM",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_TRACK": "BAIXAR MÚSICA",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_0_ARTIST": "BAIXAR ARTISTA",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ALBUM": "MOSTRAR ÁLBUM",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_TRACK": "MOSTRAR MÚSICA",
-  "STRING_SEARCH_RESULT_TOP_BUTTON_LABEL_1_ARTIST": "MOSTRAR ARTISTA",
-  "STRING_SEARCH_RESULT_OTHER_SUBHEADER_ALBUM": "Mais álbums da pesquisa",
-  "STRING_SEARCH_RESULT_OTHER_SUBHEADER_TRACK": "Mais músicas da pesquisa",
-  "STRING_SEARCH_RESULT_OTHER_SUBHEADER_ARTIST": "Mais artistas parecidos",
-  "STRING_ALBUM_VIEW_DOWNLOAD_BACK_TITLE": "Você não pode voltar",
-  "STRING_ALBUM_VIEW_DOWNLOAD_BACK_SUBTITLE": "Uma ou mais músicas estão sendo salvadas offline. Por favor aguarde até que todas sejam baixadas.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_TITLE": "A música não pode ser baixada",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_NETWORK_SUBTITLE": "Nós recomendamos que você verifique sua conexão com a internet & tente novamente em alguns minutos.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_TITLE": "Todos nós temos dias ruins",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ERROR_RATE_SUBTITLE": "We have encountered an error while saving this track. This generally means that you need to check & update your server. This error has nothing to do with this application.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_TITLE": "Aguarde",
-  "STRING_ALBUM_VIEW_DOWNLOAD_DOUBLE_SUBTITLE": "Essa música já está sendo baixada.",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_TITLE": "Essa música já está salva",
-  "STRING_ALBUM_VIEW_DOWNLOAD_ALREADY_SAVED_SUBTITLE": "Você quer baixar essa música novamente?",
-  "STRING_ALBUM_VIEW_LOADER_LABEL": "Buscando músicas...",
-  "STRING_ALBUM_VIEW_TRACKS_SUBHEADER": "Aqui estão as músicas desse álbum",
-  "STRING_ALBUM_VIEW_INFO_SUBHEADER": "Alguns insights do álbum",
-  "STRING_LOCAL_TOP_BODY_ALBUM_EMPTY": "Procure & salve algumas músicas para vê-las aqui.\nGire para atualizar e ver as novidades.",
-  "STRING_LOCAL_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
-  "STRING_LOCAL_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
-  "STRING_LOCAL_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
-  "STRING_LOCAL_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
-  "STRING_LOCAL_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
-  "STRING_LOCAL_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
-  "STRING_LOCAL_ALBUM_VIEW_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
-  "STRING_LOCAL_ALBUM_VIEW_INFO_SUBHEADER": "Alguns insights do álbum",
-  "STRING_LOCAL_ALBUM_VIEW_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
-  "STRING_LOCAL_ALBUM_VIEW_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
-  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
-  "STRING_LOCAL_ALBUM_VIEW_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
-  "STRING_NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
-  "STRING_NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
-  "STRING_NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
-  "STRING_NOW_PLAYING_NOT_PLAYING_SUBTITLE": "Tocar da sua coleção ",
-  "STRING_NOW_PLAYING_NOT_PLAYING_HEADER": "Estamos com tudo pronto...",
-  "STRING_SETTING_GITHUB": "GITHUB",
-  "STRING_SETTING_STAR_GITHUB": "Avaliar o projeto",
-  "STRING_SETTING_STARGAZERS_TITLE": "Projeto Stargazers",
-  "STRING_SETTING_STARGAZERS_SUBTITLE": "Muito obrigado pela sua compreensão",
-  "STRING_SETTING_LANGUAGE_TITLE": "Idioma",
-  "STRING_SETTING_LANGUAGE_SUBTITLE": "Mude o jeito que você enxerga o aplicativo",
-  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Reinicialização necessária",
-  "STRING_SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Você quer reiniciar o aplicativo agora?",
-  "STRING_ABOUT_TITLE": "Sobre",
-  "STRING_ABOUT_SUBTITLE": "Saiba mais sobre nós",
-  "STRING_SETTING_SERVER_CHANGE_TITLE": "Servidor",
-  "STRING_SETTING_SERVER_CHANGE_SUBTITLE": "Alterar onde o aplicativo solicita seu conteudo",
-  "STRING_SETTING_SERVER_CHANGE_SERVER_HINT": "Insira uma URL do servidor",
-  "STRING_SETTING_SERVER_CHANGE_SERVER_LABEL": "URL do servidor",
-  "STRING_SETTING_SERVER_CHANGE_ERROR_INVALID": "Essa não é uma URL válida do servidor.",
-  "STRING_SETTING_SERVER_CHANGE_ERROR_NETWORK": "Por favor verifique sua conexão com a internet.",
-  "STRING_SETTING_SERVER_CHANGE_DONE": "Servidor alterado com sucesso.",
-  "STRING_SETTING_SERVER_CHANGE_CHANGING": "Mudando de servidor...",
-  "STRING_SETTING_LANGUAGE_PROVIDERS_TITLE": "Tradutores",
-  "STRING_SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Muito obrigado pelo seu apoio ao aplicativo",
-  "STRING_SETTING_ACCENT_COLOR_TITLE": "Cor de destaque",
-  "STRING_SETTING_ACCENT_COLOR_SUBTITLE": "Mude a cor de destaque do aplicativo",
-  "STRING_SETTING_THEME_TITLE": "Tema",
-  "STRING_SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
-  "STRING_NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
-  "STRING_DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
-  "STRING_SETTING_APP_VERSION_TITLE": "Versão",
-  "STRING_SETTING_APP_VERSION_SUBTITLE": "Informações sobre a versão atual do aplicativo",
-  "STRING_SETTING_APP_VERSION_INSTALLED": "Versão instalada",
-  "STRING_SETTING_APP_VERSION_LATEST": "Última versão",
-  "STRING_MENU": "Menu",
-  "STRING_SEARCH_COLLECTION": "Procurar Coleção",
-  "STRING_SWITCH_THEME": "Trocar tema",
-  "STRING_PLAY": "Tocar",
-  "STRING_PAUSE": "Pausar",
-  "STRING_DELETE": "Deletar",
-  "STRING_SHARE": "Compartilhar",
-  "STRING_ADD_TO_PLAYLIST": "Adicionar à playlist",
-  "STRING_SAVE_TO_DOWNLOADS": "Salvar nos downloads",
-  "STRING_LOCAL_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
-  "STRING_LOCAL_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
-  "STRING_PLAYLIST": "Playlist",
-  "STRING_PLAYLISTS": "Playlists",
-  "STRING_PLAYLISTS_SUBHEADER": "Playlists criadas por você",
-  "STRING_PLAYLISTS_CREATE": "Criar uma nova playlist",
-  "STRING_PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
-  "STRING_PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
-  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
-  "STRING_LOCAL_ALBUM_VIEW_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
-  "STRING_CANCEL": "CANCELAR",
-  "STRING_PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à playlist",
-  "STRING_PLAYLIST_ADD_DIALOG_BODY": "Selecione uma playlist para adicionar essa música",
-  "STRING_PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa playlist",
-  "STRING_TRANSFERS": "Transferências",
-  "STRING_THEME_MODE_SYSTEM": "Seguir tema do sistema",
-  "STRING_SETTING_INDEXING_TITLE": "Indexando",
-  "STRING_SETTING_INDEXING_SUBTITLE": "Reindexando sua coleção de múscias",
-  "STRING_SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexando NUMBER_STRING de TOTAL_STRING músicas...",
-  "STRING_SETTING_INDEXING_DONE": "Sua coleção de músicas foi indexada.",
-  "STRING_SETTING_INDEXING_WARNING": "Não interrupa o processo.",
-  "STRING_REFRESH": "ATUALIZAR",
-  "STRING_SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
-  "STRING_NO_INTERNET_TITLE": "Sem internet",
-  "STRING_NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
-  "STRING_NO_COLLECTION_TITLE": "Coleção vazia",
-  "STRING_NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
-  "STRING_DOWNLOAD_COMPLETED": "Download Completo.",
-  "STRING_DOWNLOAD_FAILED": "Download Falhou.",
-  "STRING_DISCORD": "SERVIDOR DO DISCORD",
-  "STRING_EXIT_TITLE": "Sair",
-  "STRING_EXIT_SUBTITLE": "Você quer nos deixar?",
-  "STRING_A_TO_Z": "A à Z",
-  "STRING_DATE_ADDED": "Data adicionada",
-  "STRING_SETTING_ACCENT_COLOR_AUTOMATIC": "Cor de destaque automatica",
-  "STRING_SETTING_MISCELLANEOUS_TITLE": "Outras",
-  "STRING_SETTING_MISCELLANEOUS_SUBTITLE": "Outras configurações do aplicativo",
-  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Ativar mecânicas do iOS",
-  "STRING_SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Mudar plataforma para TargetPlatform.iOS",
-  "STRING_SELECTED_DIRECTORY": "Diretório selecionado:",
-  "STRING_LYRICS": "Letras",
-  "STRING_NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
-  "STRING_NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
-  "STRING_LYRICS_RETRIEVING": "Baixando letras...",
-  "STRING_LYRICS_NOT_FOUND": "Letras não disponíveis.",
-  "STRING_COMING_UP": "Coming Up",
-  "STRING_ALBUM_SINGLE": "Album",
-  "STRING_TRACK_SINGLE": "Track",
-  "STRING_ARTIST_SINGLE": "Artist",
-  "STRING_ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "STRING_TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "STRING_REMOVE": "REMOVE",
-  "STRING_ADD_NEW_FOLDER": "ADD NEW FOLDER",
-  "STRING_ADD_TO_NOW_PLAYING": "Add to now playing",
-  "STRING_PLAY_NOW": "Play now",
-  "STRING_COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "STRING_SELECTED_DIRECTORIES": "Selected directories:",
-  "STRING_ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
-  "STRING_SEARCH": "Search",
-  "STRING_COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
-  "STRING_RECOMMENDATIONS": "Recommendations",
-  "STRING_YOUTUBE_WELCOME": "Search for music or give a link",
-  "STRING_YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "STRING_YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
-  "STRING_RETRIEVING_INFO": "Retrieving info",
-  "STRING_RETRIEVING_LINK": "Retrieving stream",
-  "STRING_STARTING_PLAYBACK": "Starting playback",
-  "STRING_BUFFERING": "Buffering...",
-  "STRING_WARNING": "Warning",
-  "STRING_LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "STRING_ENABLE_125_SCALING": "Enable 125% scaling.",
-  "STRING_REPORT": "REPORT"
+  "INTERNET_ERROR": "Verifique sua conexão com a internet...",
+  "COLLECTION": "Coleção",
+  "NOW_PLAYING": "Tocando agora",
+  "SETTING": "Configurações",
+  "OK": "OK",
+  "YES": "SIM",
+  "NO": "NÃO",
+  "ALBUM": "Álbuns",
+  "TRACK": "Músicas",
+  "ARTIST": "Artistas",
+  "THEME_MODE_LIGHT": "Claro",
+  "THEME_MODE_DARK": "Escuro",
+  "THEME_MODE_SYSTEM": "Seguir tema do sistema",
+  "OPTIONS": "Opções",
+  "DELETE_TRACK": "Deletar música",
+  "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
+  "SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Procure & salve algumas músicas para vê-las aqui.\nGire para atualizar e ver as novidades.",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
+  "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
+  "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
+  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
+  "COLLECTION_ALBUM_INFO_SUBHEADER": "Alguns insights do álbum",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
+  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
+  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
+  "NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
+  "NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
+  "SETTING_GITHUB": "GITHUB",
+  "SETTING_STAR_GITHUB": "Avaliar o projeto",
+  "SETTING_STARGAZERS_TITLE": "Projeto Stargazers",
+  "SETTING_STARGAZERS_SUBTITLE": "Muito obrigado pela sua compreensão",
+  "SETTING_LANGUAGE_TITLE": "Idioma",
+  "SETTING_LANGUAGE_SUBTITLE": "Mude o jeito que você enxerga o aplicativo",
+  "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "Reinicialização necessária",
+  "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "Você quer reiniciar o aplicativo agora?",
+  "SETTING_LANGUAGE_PROVIDERS_TITLE": "Tradutores",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Muito obrigado pelo seu apoio ao aplicativo",
+  "SETTING_ACCENT_COLOR_TITLE": "Cor de destaque",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "Mude a cor de destaque do aplicativo",
+  "SETTING_THEME_TITLE": "Tema",
+  "SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
+  "ABOUT_TITLE": "Sobre",
+  "ABOUT_SUBTITLE": "Saiba mais sobre nós",
+  "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
+  "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
+  "SETTING_APP_VERSION_TITLE": "Versão",
+  "SETTING_APP_VERSION_SUBTITLE": "Informações sobre a versão atual do aplicativo",
+  "SETTING_APP_VERSION_INSTALLED": "Versão instalada",
+  "SETTING_APP_VERSION_LATEST": "Última versão",
+  "MENU": "Menu",
+  "SEARCH_COLLECTION": "Procurar Coleção",
+  "SWITCH_THEME": "Trocar tema",
+  "PLAY": "Tocar",
+  "PAUSE": "Pausar",
+  "DELETE": "Deletar",
+  "SHARE": "Compartilhar",
+  "ADD_TO_PLAYLIST": "Adicionar à playlist",
+  "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
+  "COLLECTION_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
+  "COLLECTION_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
+  "PLAYLISTS": "Playlists",
+  "PLAYLIST": "Playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists criadas por você",
+  "PLAYLISTS_CREATE": "Criar uma nova playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
+  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
+  "CANCEL": "CANCELAR",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à playlist",
+  "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma playlist para adicionar essa música",
+  "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa playlist",
+  "TRANSFERS": "Transferências",
+  "SETTING_INDEXING_TITLE": "Indexando",
+  "SETTING_INDEXING_SUBTITLE": "Reindexando sua coleção de múscias",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexando NUMBER_STRING de TOTAL_STRING músicas...",
+  "SETTING_INDEXING_DONE": "Sua coleção de músicas foi indexada.",
+  "SETTING_INDEXING_WARNING": "Não interrupa o processo.",
+  "REFRESH": "ATUALIZAR",
+  "SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
+  "NO_INTERNET_TITLE": "Sem internet",
+  "NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
+  "NO_COLLECTION_TITLE": "Coleção vazia",
+  "NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
+  "DISCORD": "SERVIDOR DO DISCORD",
+  "EXIT_TITLE": "Sair",
+  "EXIT_SUBTITLE": "Você quer nos deixar?",
+  "A_TO_Z": "A à Z",
+  "DATE_ADDED": "Data adicionada",
+  "SETTING_ACCENT_COLOR_AUTOMATIC": "Cor de destaque automatica",
+  "SETTING_MISCELLANEOUS_TITLE": "Outras",
+  "SETTING_MISCELLANEOUS_SUBTITLE": "Outras configurações do aplicativo",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "Ativar mecânicas do iOS",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "Mudar plataforma para TargetPlatform.iOS",
+  "SELECTED_DIRECTORY": "Diretório selecionado:",
+  "LYRICS": "Letras",
+  "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
+  "LYRICS_RETRIEVING": "Baixando letras...",
+  "LYRICS_NOT_FOUND": "Letras não disponíveis.",
+  "COMING_UP": "Coming Up",
+  "ALBUM_SINGLE": "Album",
+  "TRACK_SINGLE": "Track",
+  "ARTIST_SINGLE": "Artist",
+  "SEARCH": "Search",
+  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "REMOVE": "REMOVE",
+  "ADD_NEW_FOLDER": "ADD NEW FOLDER",
+  "ADD_TO_NOW_PLAYING": "Add to now playing",
+  "PLAY_NOW": "Play now",
+  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "SELECTED_DIRECTORIES": "Selected directories:",
+  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "RECOMMENDATIONS": "Recommendations",
+  "YOUTUBE_WELCOME": "Search for music or give a link",
+  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "RETRIEVING_INFO": "Retrieving info",
+  "RETRIEVING_LINK": "Retrieving stream",
+  "STARTING_PLAYBACK": "Starting playback",
+  "BUFFERING": "Buffering...",
+  "WARNING": "Warning",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "ENABLE_125_SCALING": "Enable 125% scaling."
 }
